# erdify

./: .gitignore  .pre-commit-config.yaml  .ruffignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_erd.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  publish-testpypi.yml  publish.yml  test.yml
docs/: CNAME  features.md  index.md  installation.md  quickstart.md
docs/examples/: erd.puml
docs/examples/dataclass/: models.py
docs/examples/django/: models.py
docs/examples/sqlalchemy/: models.py
docs/examples/sqlmodel/: models.py
docs/frameworks/: django.md  index.md  sql.md
docs/superpowers/plans/: 2026-06-17-include-model-discovery.md
docs/superpowers/specs/: 2026-06-17-include-model-discovery-design.md
docs/usage/: ci.md  cli.md  filtering.md  output-formats.md  viewing.md
examples/pydantic/: models.py
features/: index.html
frameworks/: index.html
frameworks/django/: index.html
frameworks/sql/: index.html
installation/: index.html
quickstart/: index.html
scripts/: gen_cli_docs.py
search/: search_index.json
src/erdify/: __init__.py  __main__.py  cli.py  config.py  generator.py  inject.py  parser.py  pyproject.py  sql_parser.py
src/sqlmodel_to_erd/: __init__.py  __main__.py  cli.py  config.py  parser.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_config_file.py  test_dataclass.py  test_django.py  test_edge_cases.py  test_fixtures_valid.py  test_formats.py  test_generator.py  test_include.py  test_inject.py  test_integration.py  test_link_detection.py  test_m2m.py  test_mermaid.py  test_parser.py  test_pydantic.py  test_scan_filter.py  test_sql.py  test_sqlalchemy.py  test_sqlmodel.py
tests/fixtures/dataclasses/: models.py
tests/fixtures/django/: models.py
tests/fixtures/ecommerce/: expected.puml  models.py
tests/fixtures/edge_cases/: expected.puml  models.py
tests/fixtures/empty/: models.py
tests/fixtures/inheritance/: expected.puml  models.py
tests/fixtures/link_detection/: models.py
tests/fixtures/m2m_link_model/: expected.puml  models.py
tests/fixtures/m2m_secondary/: models.py
tests/fixtures/m2m_secondary_table/: models.py
tests/fixtures/malformed/: models.py
tests/fixtures/pydantic/: models.py
tests/fixtures/scan_filter/app/: models.py
tests/fixtures/scan_filter/legacy/: models.py
tests/fixtures/sql/: ecommerce.sql  expected.puml
tests/fixtures/sqlalchemy/: models.py
usage/ci/: index.html
usage/cli/: index.html
usage/filtering/: index.html
usage/output-formats/: index.html
usage/viewing/: index.html
