[project]
name = "erdify"
version = "0.11.2"
description = "A zero-dependency ERD generator for your Python models — pure AST, no database required."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "devsuit GmbH", email = "tech@devsuit.de" },
    { name = "Fabian Clemenz", email = "fabian.clemenz@devsuit.de" }
]
requires-python = ">=3.11"
keywords = [
    "sqlmodel",
    "sqlalchemy",
    "django",
    "pydantic",
    "dataclass",
    "erd",
    "plantuml",
    "diagram",
    "database",
    "erdify",
    "sql",
    "ddl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []  # No runtime dependencies - uses stdlib ast module

[project.optional-dependencies]
sql = ["sqlglot>=25"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "sqlmodel", "sqlalchemy", "pydantic", "django", "sqlglot"]
docs = ["mkdocs-material"]

[project.scripts]
erdify = "erdify.cli:main"

[project.urls]
Homepage = "https://github.com/devsuit-berlin/erdify"
Repository = "https://github.com/devsuit-berlin/erdify"
Documentation = "https://github.com/devsuit-berlin/erdify#readme"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tests/fixtures/malformed/"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.report]
fail_under = 90
show_missing = true
